# Silentium

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  building.md  design-brief.md  gui-components.md  handoff-cleanup.md  manual.md  presets.md  research-notes.md
docs/adr/: 0001-use-juce8-framework.md  0002-agplv3-licensing.md
presets/factory/: ambientSustain.json  chugLock.json  default.json  diKeyedWorkflow.json  duckUnderLead.json  listenCheck.json  naturalDecay.json  pickAttackFocus.json  surgicalMute.json
resources/gui/: needle-filmstrip-v1.json  needle-filmstrip-v2.json  vu-hub-occluder-v1.json
src/: PluginEditor.cpp  PluginEditor.h  PluginEditorLayout.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: GateEngine.cpp  GateEngine.h
src/gui/: AnalogMeter.cpp  AnalogMeter.h  BasilicaLookAndFeel.cpp  BasilicaLookAndFeel.h  Flicker.h  ImageDensity.h  RotatingImageKnob.cpp  RotatingImageKnob.h
src/params/: ParameterIds.h  ParameterLayout.cpp  ParameterLayout.h
src/presets/: PresetBar.cpp  PresetBar.h
tests/: BusLayoutTests.cpp  DesignBriefTests.cpp  DspFeatureTests.cpp  GateEngineTests.cpp  LatencyTests.cpp  LocalisationTests.cpp  ParameterTests.cpp  PresetManagerTests.cpp  RobustnessTests.cpp  StateTests.cpp  TestHelpers.h
tests/gui/: AnalogMeterAccessibilityTests.cpp  AnalogMeterBallisticsTests.cpp  BasilicaLookAndFeelContrastTests.cpp  EditorAccessibilityTests.cpp  EditorLayoutTests.cpp  EditorSnapshotTests.cpp
